# tidb-hackathon-2020

./: .gitignore  CMakeLists.txt  README.md  RFC.md  go.mod  go.sum  prepare.sh  readme.md
src/: TobeImplement.cpp  aggregationHandle.go  aggregation_handle.go  go.sum  main.cpp  main.go  preagg_sink.go  preaggregate.go
src/preagg/: AggFunctionHandle.cpp  AggFunctionHandle.h  AggFunctionHandleBase.h  AvgAggFunctionHanle.cpp  CountAggFunctionHandle.cpp  MaxAggFunctionHandle.cpp  MinAggFucntionHandle.cpp  SumAggFunctionHandle.cpp  TxnSolver.cpp  TxnSolver.h
src/raftstore/: TOPSolver.cpp  TOPSolver.h  TxnSolver.cpp  TxnSolver.h
